# FlowStock

./: .gitignore  README.md  docker-compose.yml  evidence.md  generate_evidence.py  test_ui_workflows.py
backend/: .env.example  Dockerfile  Inventory_Upload_Template.xlsx  Material_Master_Template.xlsx  alembic.ini  audit_tests.py  check_db.py  check_skus.py  create_templates.py  e2e_test.db  fix_indent.py  get_endpoints.py  local.db  patch_service.py  patch_tests.py  patch_tz.py  patch_verify.py  production_simulation.py  pyproject.toml  reqs.txt  reqs2.txt  seed.py  seed_materials.py  test.db  test.xlsx  test_actual_template.py  test_api.py  test_bom.py  test_clean.db  test_clean_migrations.py  test_clean_migrations_neon.py  test_clean_seed_neon.py  test_commit.py  test_create_db.py  test_db.py  test_edge_cases.py  test_fixes.py  test_incremental.py  test_login.py  test_material_upload_regression.py  (+12 more)
backend/alembic/: env.py
backend/alembic/versions/: 384d91871300_add_warehouse_id_to_users.py  a0f94a398d8b_workflow_refinements_and_notifications.py  b5e8b2c0270a_initial.py  be2228dfb265_add_is_system_to_role.py  c3f1a2b9d4e5_add_admin_user_columns.py  ce805782f353_make_email_nullable.py  df1a4b0d0685_add_dispatched_received_quantities_and_.py  e1ca08b6a998_add_warnings_to_bom_upload_sessions.py
backend/app/: main.py
backend/app/api/: health.py  router.py
backend/app/core/: __init__.py  classification_rules.json  config.py  errors.py  logger.py  middleware.py  responses.py
backend/app/infrastructure/: __init__.py  base_model.py  base_repository.py  database.py
backend/app/utils/: export.py  file_validation.py
backend/scripts/: migrate_snapshots.py
backend/tests/: conftest.py  test_audit_findings.py  test_bom_e2e.py  test_final_verification.py
backend/tests/api/: test_auth.py
docs/: API.md  Architecture.md  (+8 more)
(+136 files in other folders)
